# gdi2024py

./: .gitignore  01_Einführung.ipynb  02_Basic-Python-Syntax.ipynb  03_Semantik-Variablen.ipynb  04-Semantik-Operatoren.ipynb  05-Integrierte-Einfache-Typen.ipynb  06-Integrierte-Datenstrukturen.ipynb  07-Kontrollfluss.ipynb  08-Funktionen-Definieren.ipynb  09-Fehler-und-Ausnahmen.ipynb  10-Iteratoren.ipynb.1  11-List-Comprehensions.ipynb  12-Generatoren.ipynb.1  13-Module-und-Pakete.ipynb.1  14-Zeichenketten-und-Reguläre-Ausdrücke.ipynb  README.md  aufgabe_6.py  first.ipynb  first.py  html  number_systems.py  pyproject.toml  restwertmethode.py  test.ipynb  test.py
.devcontainer/: Dockerfile  devcontainer.json
Beispiele/: aufgabe_6.py  restwertmethode.py  sympy.ipynb  sympy.py
